# ros_ci_and_coverage

./: .coverage.sh  .coveragerc  .gitignore  .travis.yml  README.md  upstream.repos
example_ws/src/cobalt_template_pkg/: CMakeLists.txt  package.xml  setup.py
example_ws/src/cobalt_template_pkg/include/: utils.hpp
example_ws/src/cobalt_template_pkg/nodes/: template_cpp_node.cpp  template_python_node.py
example_ws/src/cobalt_template_pkg/src/cobalt_template_pkg/: utils.py
example_ws/src/cobalt_template_pkg/test/: template_cpp_integration_test.cpp  template_cpp_integration_test.launch  template_cpp_unit_test.cpp  template_python_integration_test.launch  template_python_integration_test.py  template_python_unit_test.py
example_ws/src/example_pkg/: CMakeLists.txt  package.xml
example_ws/src/example_pkg/launch/: pub_sub.launch
example_ws/src/example_pkg/nodes/: publisher_node.py  subscriber_node.py
example_ws/src/example_pkg/src/example_pkg/: utils.py
example_ws/src/example_pkg/test/: sample_rostest.py  sample_rostest.test  test_utils.py
